# aicosExif03

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/aicosexif03/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/perl5_aarch64/lib/perl5/5.41.8/aarch64-linux/: .packlist  Config.pm  Config_git.pl  Config_heavy.pl  DynaLoader.pm  Errno.pm
app/src/main/assets/perl5_aarch64/lib/perl5/5.41.8/aarch64-linux/CORE/: git_version.h  perl.h  perl_langinfo.h  xconfig.h
app/src/main/assets/perl5_aarch64/lib/perl5/5.41.8/aarch64-linux/Devel/: PPPort.pm
app/src/main/assets/perl5_aarch64/lib/perl5/5.41.8/pod/: Functions.pm  perlapi.pod  perlintern.pod  perlmodlib.pod  perltoc.pod
app/src/main/cpp/: CMakeLists.txt  exiftool_jni.cpp
app/src/main/cpp/perl_headers/arm64-v8a/: config.h
app/src/main/cpp/perl_headers/armeabi-v7a/: config.h  xconfig.h
app/src/main/java/com/example/aicosexif03/: ExifTool.kt  MainActivity.kt  TarExtractor.kt
app/src/main/java/com/example/aicosexif03/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/aicosexif03/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
